--- a/README.org
+++ b/README.org
@@ -86,14 +86,46 @@ function(accessToken, ctx, cb) {
 
 That gets the user id from Strava and allows Auth0 to authenticate.
 
-** Netlify Deployment
+** New Deployment Strategy
 
-After much experimentation it appears I can get this all to work via GitHub + Netlify and Netlify functions. The architecture (which is way more complicated than I'd like but cest la vie) is:
-- Source on GitHub, GitHub actions deploy to Netlify.
-- Initial authentication goes through Auth0 and uses OAuth
-- If authentication succeeds we call the Auth0 API, which proxies to a Netlify function with the full ID Token
-- After validating the token the Netlify function calls a function to get the full user data
-- Assuming a strava access-token is present, it calls the Strava API with that token and returns the value
-- At this point you could move out of using WebAssembly and just put this on the server, but I'd rather not. 
+*** Website (heart-rate-drift) in Netlify so its easy to get via www.paytonrules.com/heart-rate-drift
+*** OAuth exchange via an AWS function using cargo-lambda
+**** But how do I store my clientID and client Secret? We shall see
+*** Note - to deploy I tried several directions. Eventually I followed these: (maybe) https://docs.aws.amazon.com/lambda/latest/dg/rust-package.html
 
+
+***********************************
+*** AWS Setup
+The deployment of the function at ~functions/strava-oauth-exchange~ is done by calling ~cargo lambda deploy strava-oauth-exchange --enable-function-url~ from that directory. This requires a user to be setup in AWS lambda with permissions. 
+
+You need to use ~aws configure~ to setup credentials matching that user, and you need to make sure the user is setup correctly. It needs to have:
+AWSLambda_FullAccess
+AWSLambdaBasicExecutionRole
+AWSLambdaRole
+
+and then attached as an inline policy:
+#+BEGIN_SRC:
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Sid": "VisualEditor0",
+            "Effect": "Allow",
+            "Action": [
+                "iam:CreateRole",
+                "iam:AttachRolePolicy",
+                "iam:UpdateAssumeRolePolicy"
+            ],
+            "Resource": "arn:aws:iam::<IDNumber>:role/*"
+        }
+    ]
+}
+#+END_SRC:
+
+Where IDNumber matches the IAM number for your user.
+
+
+
+- Describe using aws configure, the user you needed to create
+- Make note of the cross-compilation struggles
 
